# imap-mcp-server

./: .dockerignore  .docs-manifest.yml  .env.example  .gitignore  .platform-standards.yml  .publish-exclude  AGENT-LESSONS.md  BUILD.md  CHANGELOG.md  CONTEXT-SUMMARY.md  Dockerfile  Dockerfile.public  EXTERNAL-BUILD.md  LICENCE  NOTICE  PUBLICATION-SMOKE.md  README.md  RULES.md  config.yaml  defaults.yaml  docker-build.sh  docker-entrypoint.sh  docker-env.example  docker-env.public.example  env-docker-example  healthcheck.sh  local-docker-server.sh  pyproject.toml  server_control.sh
database/: chat-client.db
database/migrations/cloud_dog_db/: README.md
docker/: docker-compose.yml
docs/: A2A-REFERENCE.md  API-REFERENCE.md  ARCHITECTURE.md  AUDIT-EVENTS.md  BUILD.md  CHANGELOG.md  DATA-MODEL.md  DEPLOY.md  DOCKER.md  ENV-REFERENCE.md  MCP-REFERENCE.md  NORMALISED-QUERY.md  NORMALISED_QUERY.md  PARAMETERS.md  PREPROD.md  README.md  RELEASE-1.0RC01.md  REQ-COVERAGE.md  REQUIREMENTS.md  ROLES-AND-USECASES.md  TEST-HISTORY.md  TEST-STATUS.md  TESTS.md  WARRANTY-1.0RC01.md  WEBUI-REFERENCE.md  openapi.json
scripts/: check-public-export-clean.sh  publish-before-pin-guard.sh  publish_before_pin_guard.py  validate-vault.sh  verify-live-tool-imap.sh  verify-local-mail.sh  verify-web-services.sh
src/imap_hub_core/: storage_paths.py
src/imap_hub_core/archive/: __init__.py  exporter.py
src/imap_hub_core/attachment/: __init__.py  listing.py
src/imap_hub_core/audit/: audit_log.py  context.py  events.py  logger.py
src/imap_hub_core/cache/: retention.py  store.py
src/imap_hub_core/change_stream/: __init__.py  criteria.py  mailbox_watcher.py  service.py
src/imap_hub_core/config/: __init__.py  access.py  base_paths.py  loader.py  models.py
src/imap_hub_core/db/: __init__.py  models.py  runtime.py
src/imap_hub_core/duplicate/: __init__.py  detector.py  policy.py
src/imap_hub_core/extract/: extractors.py
src/imap_hub_core/imap/: connection.py  connector.py  folder_policy.py  sync.py
src/imap_hub_core/index/: __init__.py  manager.py
src/imap_hub_core/jobs/: __init__.py  models.py  runtime.py  workers.py
src/imap_hub_core/ledger/: normaliser.py  (+3 more)
src/imap_hub_server/: __init__.py  _runtime.py  a2a_events_broadcaster.py  a2a_server.py  api_server.py  config.py  gmail_admin.py  logging_runtime.py  main.py  mcp_server.py  rbac_seam.py  tools.py  web_flat_roles.py  web_server.py  webui_canonical.py
tests/: SCOPE-MAP.md  conftest.py  pytest.ini  test_st_group_admin_delegation.py
tests/application/: axe_a11y_audit.mjs  conftest.py  url_canonical_audit.py  webui_e2e.py  webui_e2e_runner.mjs
tests/fixtures/: TEST-PACK-REFERENCE.md
tests/helpers/: attachment_seed.py  live_runtime.py  ports.py
tests/integration/: conftest.py
tests/smoke/: test_cascade_resolves.py
(+167 files in other folders)
