[project]
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
name = "imap-mcp-server"
version = "0.1.1RC1"
description = "Multi-profile IMAP MCP server with local cache, search ledger, optional indexing and archiving."
requires-python = ">=3.12"
dependencies = [
  "cloud_dog_config>=0.3.1",
  "cloud_dog_logging>=0.3.3",
  "cloud_dog_api_kit==0.13.0",
  "cloud_dog_idam>=0.5.2,<0.6",
  "cloud_dog_jobs>=0.3.0",
  "cloud_dog_db>=0.1.0",
  "cloud_dog_storage==0.1.4",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "websockets>=12.0",
]

[project.optional-dependencies]
imap = ["imapclient>=3.0", "pyzmail36>=1.0"]
index = ["chromadb>=0.5"]
crypto = ["cryptography>=42.0"]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.0",
]

[tool.ruff]
line-length = 100

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/imap-mcp-server"
